# quarterly_planning

./: .gitignore  Cargo.toml  Makefile  PLAN.md  README.md
src/: agent.rs  cli.rs  config.rs  discovery.rs  init_wizard.rs  lib.rs  main.rs  optimize.rs  plan.rs
tests/fixtures/agents/breakdown/: expected_01.md  expected_02.md  expected_03.md  expected_04.md  expected_05.md  expected_06.md  expected_07.md  expected_08.md  expected_09.md  expected_10.md  expected_11.md  expected_12.md  expected_13.md  expected_14.md  expected_15.md  expected_16.md  expected_17.md  expected_18.md  expected_19.md  expected_20.md  expected_21.md  expected_22.md  expected_23.md  expected_24.md  expected_25.md  input_01.md  input_02.md  input_03.md  input_04.md  input_05.md  input_06.md  input_07.md  input_08.md  input_09.md  input_10.md  input_11.md  input_12.md  input_13.md  input_14.md  input_15.md  (+10 more)
tests/fixtures/agents/deliverables/: expected_01.md  expected_02.md  expected_03.md  expected_04.md  expected_05.md  expected_06.md  expected_07.md  expected_08.md  expected_09.md  expected_10.md  expected_11.md  expected_12.md  expected_13.md  expected_14.md  expected_15.md  expected_16.md  expected_17.md  expected_18.md  expected_19.md  expected_20.md  expected_21.md  expected_22.md  expected_23.md  expected_24.md  expected_25.md  input_02.md  input_03.md  input_04.md  input_05.md  input_06.md  input_07.md  input_08.md  input_09.md  input_10.md  input_11.md  input_12.md  input_13.md  input_14.md  input_15.md  input_16.md  (+8 more)
tests/fixtures/agents/details/: expected_01.md  expected_02.md  (+31 more)
(+41 files in other folders)
